@@ -24,9 +24,9 @@
 #ifndef RSVG_H
 #define RSVG_H
 
-G_BEGIN_DECLS
-
 #include <gdk-pixbuf/gdk-pixbuf.h>
+
+G_BEGIN_DECLS
 
 typedef enum {
 	RSVG_ERROR_FAILED
@@ -42,9 +42,9 @@ typedef void (* RsvgSizeFunc) (gint     *width,
 			       gpointer  user_data);
 
 
+void        rsvg_set_fonts_dir            (const char      *fonts_dir);
+
 RsvgHandle *rsvg_handle_new               (void);
-void        rsvg_handle_set_fonts_dir     (RsvgHandle      *handle,
-					   const char      *fonts_dir);
 void        rsvg_handle_set_size_callback (RsvgHandle      *handle,
 					   RsvgSizeFunc     size_func,
 					   gpointer         user_data,
